Status update string to be used in Terminator

--- a/confs/asoundrc.conf
+++ b/confs/asoundrc.conf
@@ -1,40 +1,97 @@
 #defines the required PCM setup
-pcm.Euro_HP {
-	type hw
-	card 0
-	device 0
-	subdevice 0
-}
+##pcm.Euro_HP {
+#	type hw
+#	card 0
+#	device 0
+#	subdevice 0
+#}
+#
+#pcm.Euro_MIC1 {
+#	type hw
+#	card 0
+#	device 0
+#	subdevice 0
+#}
+#
+#pcm.Euro_MIC2 {
+#	type hw
+#	card 0
+#	device 0
+#	subdevice 1
+#}
+#
+#pcm.Euro_MIC3 {
+#	type hw
+#	card 0
+#	device 0
+#	subdevice 2
+#}
+#
+#pcm_slave.stereo_slave {
+#	pcm "hw:0,0"
+#	channels 2
+#	rate 48000
+#}
 
-pcm.Euro_MIC1 {
-	type hw
-	card 0
-	device 0
-	subdevice 0
-}
-
-pcm.Euro_MIC2 {
-	type hw
-	card 0
-	device 0
-	subdevice 1
-}
-
-pcm.Euro_MIC3 {
-	type hw
-	card 0
-	device 0
-	subdevice 2
-}
-
-pcm_slave.stereo_slave {
-	pcm "hw:0,0"
-	channels 2
-	rate 48000
-}
-
-pcm.!default {
-	type plug
+#pcm.!default {
+#type plug
 	slave stereo_slave
+#}
+#
+#
+# output device
+pcm.AD1989A{
+    type hw
+    card 0
+}
+
+# input device* *
+pcm.quad {
+        type multi
+
+        slaves.a.pcm "hw:0,0,0" # ADC 0
+        slaves.a.channels 2
+        slaves.b.pcm "hw:0,0,1" # ADC 1
+        slaves.b.channels 2
+	slaves.c.pcm "hw:0,0,2" # ADC 2
+	slaves.c.channel 3
+	
+        bindings.0.slave a
+        bindings.0.channel 0
+        bindings.1.slave a
+        bindings.1.channel 1
+        bindings.2.slave b
+        bindings.2.channel 0
+        bindings.3.slave b
+        bindings.3.channel 1
+        bindings.4.slave c
+        bindings.4.channel 0
+        bindings.5.slave c
+        bindings.5.channel 1
+}
+
+# input device containing interleaved data
+pcm.quad2 {
+        type route
+        slave.pcm "quad"
+        ttable.0.0 1
+        ttable.1.1 1
+        ttable.2.2 1
+        ttable.3.3 1
+}
+pcm.hex2 {
+	type route
+	slave.pcm "hex"
+	ttable.0.0 1
+	ttable.1.1 1
+	ttable.2.2 1
+	ttable.3.3 1
+	ttable.4.4 1
+	ttable.5.5 1
+}
+### CTL DEVICES (controls)
+ctl.mixer0 {
+    type hw
+    card 0
 }
 
