--- a/confs/asoundrc.conf
+++ b/confs/asoundrc.conf
@@ -1,45 +1,50 @@
 #defines the required PCM setup
-##pcm.Euro_HP {
-#	type hw
-#	card 0
-#	device 0
-#	subdevice 0
-#}
-#
-#pcm.Euro_MIC1 {
-#	type hw
-#	card 0
-#	device 0
-#	subdevice 0
-#}
-#
-#pcm.Euro_MIC2 {
-#	type hw
-#	card 0
-#	device 0
-#	subdevice 1
-#}
-#
-#pcm.Euro_MIC3 {
-#	type hw
-#	card 0
-#	device 0
-#	subdevice 2
-#}
-#
-#pcm_slave.stereo_slave {
-#	pcm "hw:0,0"
-#	channels 2
-#	rate 48000
-#}
+pcm.Euro_HP {
+	type hw
+	card 0
+	device 0
+	subdevice 0
+	channels 2
+}
 
-#pcm.!default {
-#type plug
+pcm.Euro_MIC1 {
+	type hw
+	card 0
+	device 0
+	subdevice 0
+	channels 2
+	rate 44100
+	format S16_LE
+}
+
+pcm.Euro_MIC2 {
+	type hw
+	card 0
+	device 0
+	subdevice 1
+	channels 2
+}
+
+pcm.Euro_MIC3 {
+	type hw
+	card 0
+	device 0
+	subdevice 2
+	channels 2
+}
+
+pcm_slave.stereo_slave {
+	pcm "hw:0,0"
+	channels 2
+	rate 44100
+}
+
+pcm.!default {
+	type plug
 	slave stereo_slave
-#}
-#
-#
-# output device
+}
+
+
 pcm.AD1989A{
     type hw
     card 0
